Fix freshman profile icon alignment.

--- a/scss/admissions.scss
+++ b/scss/admissions.scss
@@ -94,7 +94,7 @@ article.node--type-admissions {
     > .field__item {
       width: 480px;
       margin: 10px;
-      padding: 15px 30px;
+      padding: 15px 15px;
       box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
       @media screen and (min-width: 321px) and (max-width: 1223px) {
         width: 350px;
@@ -129,12 +129,11 @@ article.node--type-admissions {
         img.freshman-profile-icon {
           float: left;
           padding-left: 5px;
-          padding-right: 20px;
           height: 60px;
 
           @media screen and (max-width: 1228px) {
             height: 50px;
-            padding: 0 10px 0 0;
+            padding-left: 0;
           }
         }
       }
